// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddCourseFormComponent should snap when not enabled 1`] = `
<tm-add-course-form
  closeCourseFormEvent={[Function EventEmitter]}
  courseAdded={[Function EventEmitter]}
  courseService={[Function Object]}
  isEnabled="false"
  newCourseId=""
  newCourseMessageTemplate={[Function TemplateRef_]}
  newCourseName=""
  statusMessageService={[Function Object]}
  timezone={[Function String]}
  timezoneService={[Function Object]}
  timezones={[Function Array]}
>
  <div
    class="card border-primary fill-plain"
  >
    <div
      class="close-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
    <div
      class="card-body"
    >
      <div
        class="form-group row"
      >
        <label
          class="col-sm-3 control-label bold-label text-right"
        >
          Course ID:
        </label>
        <div
          class="col-sm-3"
        >
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            maxlength="40"
            ng-reflect-maxlength="40"
            ng-reflect-model=""
            ng-reflect-ngb-tooltip="Enter the identifier of the co"
            ngbtooltip="Enter the identifier of the course, e.g.CS3215-2013Semester1."
            placeholder="e.g. CS3215-2013Semester1"
            type="text"
          />
        </div>
      </div>
      <div
        class="form-group row"
      >
        <label
          class="col-sm-3 control-label bold-label text-right"
        >
          Course Name:
        </label>
        <div
          class="col-sm-9"
        >
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            maxlength="64"
            ng-reflect-maxlength="64"
            ng-reflect-model=""
            ng-reflect-ngb-tooltip="Enter the name of the course, "
            ngbtooltip="Enter the name of the course, e.g. Software Engineering."
            placeholder="e.g. Software Engineering"
            type="text"
          />
        </div>
      </div>
      <div
        class="form-group row"
      >
        <label
          class="col-sm-3 control-label bold-label text-right"
        >
          Time Zone:
        </label>
        <div
          class="col-sm-9"
        >
          <div
            class="input-group"
          >
            <select
              class="form-control ng-untouched ng-pristine ng-valid"
              ng-reflect-model="UTC"
              ng-reflect-ngb-tooltip="The time zone for the course. "
              ngbtooltip="The time zone for the course. You should not
                  need to change this as it is auto-detected based on your device settings. TEAMMATES automatically adjusts
                  to match the current time offset in your area, including clock changes due to daylight saving time."
            >
              
              <option
                ng-reflect-value="GMT"
                value="GMT"
              >
                GMT
              </option>
            </select>
            <span
              class="input-group-btn"
            >
              <button
                class="btn btn-primary"
              >
                Auto Detect
              </button>
            </span>
          </div>
        </div>
      </div>
      <div
        class="form-group row"
      >
        <div
          class="offset-sm-3 col-sm-9"
        >
          <button
            class="btn btn-primary"
          >
            Add Course
          </button>
        </div>
      </div>
    </div>
  </div>
</tm-add-course-form>
`;

exports[`AddCourseFormComponent should snap with default fields 1`] = `
<tm-add-course-form
  closeCourseFormEvent={[Function EventEmitter]}
  courseAdded={[Function EventEmitter]}
  courseService={[Function Object]}
  isEnabled={[Function Boolean]}
  newCourseId=""
  newCourseMessageTemplate={[Function TemplateRef_]}
  newCourseName=""
  statusMessageService={[Function Object]}
  timezone={[Function String]}
  timezoneService={[Function Object]}
  timezones={[Function Array]}
>
  <div
    class="card border-primary fill-plain"
  >
    <div
      class="close-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
    <div
      class="card-body"
    >
      <div
        class="form-group row"
      >
        <label
          class="col-sm-3 control-label bold-label text-right"
        >
          Course ID:
        </label>
        <div
          class="col-sm-3"
        >
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            maxlength="40"
            ng-reflect-maxlength="40"
            ng-reflect-model=""
            ng-reflect-ngb-tooltip="Enter the identifier of the co"
            ngbtooltip="Enter the identifier of the course, e.g.CS3215-2013Semester1."
            placeholder="e.g. CS3215-2013Semester1"
            type="text"
          />
        </div>
      </div>
      <div
        class="form-group row"
      >
        <label
          class="col-sm-3 control-label bold-label text-right"
        >
          Course Name:
        </label>
        <div
          class="col-sm-9"
        >
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            maxlength="64"
            ng-reflect-maxlength="64"
            ng-reflect-model=""
            ng-reflect-ngb-tooltip="Enter the name of the course, "
            ngbtooltip="Enter the name of the course, e.g. Software Engineering."
            placeholder="e.g. Software Engineering"
            type="text"
          />
        </div>
      </div>
      <div
        class="form-group row"
      >
        <label
          class="col-sm-3 control-label bold-label text-right"
        >
          Time Zone:
        </label>
        <div
          class="col-sm-9"
        >
          <div
            class="input-group"
          >
            <select
              class="form-control ng-untouched ng-pristine ng-valid"
              ng-reflect-model="UTC"
              ng-reflect-ngb-tooltip="The time zone for the course. "
              ngbtooltip="The time zone for the course. You should not
                  need to change this as it is auto-detected based on your device settings. TEAMMATES automatically adjusts
                  to match the current time offset in your area, including clock changes due to daylight saving time."
            >
              
              <option
                ng-reflect-value="GMT"
                value="GMT"
              >
                GMT
              </option>
            </select>
            <span
              class="input-group-btn"
            >
              <button
                class="btn btn-primary"
              >
                Auto Detect
              </button>
            </span>
          </div>
        </div>
      </div>
      <div
        class="form-group row"
      >
        <div
          class="offset-sm-3 col-sm-9"
        >
          <button
            class="btn btn-primary"
          >
            Add Course
          </button>
        </div>
      </div>
    </div>
  </div>
</tm-add-course-form>
`;
